@@ -17,6 +17,7 @@ Features under a numbered section are complete and available in the Wrest gem.
  * Ensure Components::Container is ActiveModel compliant
 
 == Current
+ * GH#61 Option propogate while converting uri to UriTemplate and back.
  * GH#64 Removed Caching.
  * Extended Hash with method 'keys_to_array'
  * GH#32 Callback for response status codes.
